# onco-sentry

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_INSERTION_HELPER.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GIT_COMMANDS.txt  LICENSE  PRE_COMMIT_CHECKLIST.md  README.md  SECURITY.md  SETUP_INSTRUCTIONS.txt  environment.lock.yml  environment.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  release-drafter.yml
.github/_archive/: ci.yml.bak-20251031-082629
.github/workflows/: ci.yml  codeql.yml  coverage.yml  dependabot-auto-merge.yml  pre-commit.yml  release-drafter.yml  sbom.yml
config/: example_config.yaml
docs/: API_SETUP.md  ARCHITECTURE.md  VALIDATION_GUIDE.md  artifact_manifest.json  assets_manifest.csv
examples/: example_vignette.json
notebooks/: index.json
notebooks/20251031_sentry/: MANIFEST.json  sentry.html  sentry.ipynb  sentry.py  sentry.stripped.ipynb
rubric/: sms_items.csv
scripts/: 01_generate_vignettes.py  02_export_validation.py  04_ingest_scoring.py  04b_promote_adjudication.py  05_t2_adjudication.py  06_irr_report.py  07_advanced_validation.py
setup/: setup_project.py
tests/: test_rubric.py
