[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "onco-sentry"
version = "0.0.0"
description = "Oncology-aware mental-health crisis evaluation for LLMs (research repository)."
authors = [
  { name = "Sanwal Ahmad Zafar", email = "sanwalzafar@sjtu.edu.cn" },
  { name = "Assoc. prof. Wei Qin", email = "sanwalzafar@sjtu.edu.cn" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
